Apply form styling to all formtastic forms rather than just default actions

--- a/app/assets/stylesheets/arctic_admin/pages/_form.scss
+++ b/app/assets/stylesheets/arctic_admin/pages/_form.scss
@@ -1,8 +1,6 @@
 body.logged_in {
-  &.new, &.edit, &.create, &.update {
-    @include sidebar-container();
-
-    form legend {
+  form.formtastic {
+    & legend {
       font-weight: normal;
     }
 
