bring back the sidebar

--- a/app/assets/stylesheets/arctic_admin/pages/_form.scss
+++ b/app/assets/stylesheets/arctic_admin/pages/_form.scss
@@ -1,4 +1,8 @@
 body.logged_in {
+  &.new, &.edit, &.create, &.update {
+    @include sidebar-container();
+  }
+
   form.formtastic {
     & legend {
       font-weight: normal;
